Migrated to factory methods